--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import tensorflow as tf\n",
     "import numpy as np\n",
     "import math\n",
     "import timeit\n",
@@ -19,27 +18,11 @@
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.models import Model, Sequential\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.callbacks import ModelCheckpoint,EarlyStopping,TensorBoard,CSVLogger,ReduceLROnPlateau,LearningRateScheduler\n",
     "%matplotlib inline\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.callbacks import ModelCheckpoint,EarlyStopping,TensorBoard,CSVLogger,ReduceLROnPlateau,LearningRateScheduler"
-   ]
-  },
-  {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +91,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -231,90 +213,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "early_stopping = EarlyStopping(patience=5, verbose=1,restore_best_weights=True)\n",
+    "reduce_lr = ReduceLROnPlateau(factor=0.1, patience=3,verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# augs_gen = ImageDataGenerator(featurewise_center=False, samplewise_center=False,\n",
+    "#                               featurewise_std_normalization=False, samplewise_std_normalization=False,\n",
+    "#                               zca_whitening=False, rotation_range=10, zoom_range=0.1, width_shift_range=0.2,\n",
+    "#                               height_shift_range=0.2, horizontal_flip=True, vertical_flip=False)\n",
+    "# augs_gen.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:`period` argument is deprecated. Please use `save_freq` to specify the frequency in number of batches seen.\n"
+      "Epoch 1/20\n",
+      " 44/226 [====>.........................] - ETA: 13:49 - loss: 5.2408 - accuracy: 0.0401"
      ]
-    }
-   ],
-   "source": [
-    "checkpoint = ModelCheckpoint(\n",
-    "    './base.model',\n",
-    "    monitor='val_loss',\n",
-    "    verbose=1,\n",
-    "    save_best_only=True,\n",
-    "    mode='min',\n",
-    "    save_weights_only=False,\n",
-    "    period=1\n",
-    ")\n",
-    "earlystop = EarlyStopping(\n",
-    "    monitor='val_loss',\n",
-    "    min_delta=0.001,\n",
-    "    patience=30,\n",
-    "    verbose=1,\n",
-    "    mode='auto'\n",
-    ")\n",
-    "\n",
-    "\n",
-    "reduce = ReduceLROnPlateau(\n",
-    "    monitor='val_loss',\n",
-    "    factor=0.1,\n",
-    "    patience=3,\n",
-    "    verbose=1, \n",
-    "    mode='auto'\n",
-    ")\n",
-    "\n",
-    "callbacks = [checkpoint,reduce]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate 8.08 GiB for an array with shape (14406, 224, 224, 3) and data type float32",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m augs_gen \u001b[39m=\u001b[39m ImageDataGenerator(featurewise_center\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, samplewise_center\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m      2\u001b[0m                               featurewise_std_normalization\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, samplewise_std_normalization\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,\n\u001b[0;32m      3\u001b[0m                               zca_whitening\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, rotation_range\u001b[39m=\u001b[39m\u001b[39m10\u001b[39m, zoom_range\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m, width_shift_range\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m,\n\u001b[0;32m      4\u001b[0m                               height_shift_range\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m, horizontal_flip\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, vertical_flip\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[1;32m----> 5\u001b[0m augs_gen\u001b[39m.\u001b[39;49mfit(X_train)\n",
-      "File \u001b[1;32mc:\\Users\\lengu\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\preprocessing\\image.py:2110\u001b[0m, in \u001b[0;36mImageDataGenerator.fit\u001b[1;34m(self, x, augment, rounds, seed)\u001b[0m\n\u001b[0;32m   2107\u001b[0m \u001b[39mif\u001b[39;00m seed \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   2108\u001b[0m     np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mseed(seed)\n\u001b[1;32m-> 2110\u001b[0m x \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mcopy(x)\n\u001b[0;32m   2111\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrescale:\n\u001b[0;32m   2112\u001b[0m     x \u001b[39m*\u001b[39m\u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mrescale\n",
-      "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mcopy\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[1;32mc:\\Users\\lengu\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\lib\\function_base.py:959\u001b[0m, in \u001b[0;36mcopy\u001b[1;34m(a, order, subok)\u001b[0m\n\u001b[0;32m    870\u001b[0m \u001b[39m@array_function_dispatch\u001b[39m(_copy_dispatcher)\n\u001b[0;32m    871\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mcopy\u001b[39m(a, order\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mK\u001b[39m\u001b[39m'\u001b[39m, subok\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[0;32m    872\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    873\u001b[0m \u001b[39m    Return an array copy of the given object.\u001b[39;00m\n\u001b[0;32m    874\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    957\u001b[0m \n\u001b[0;32m    958\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 959\u001b[0m     \u001b[39mreturn\u001b[39;00m array(a, order\u001b[39m=\u001b[39;49morder, subok\u001b[39m=\u001b[39;49msubok, copy\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[1;31mMemoryError\u001b[0m: Unable to allocate 8.08 GiB for an array with shape (14406, 224, 224, 3) and data type float32"
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
-    "augs_gen = ImageDataGenerator(featurewise_center=False, samplewise_center=False,\n",
-    "                              featurewise_std_normalization=False, samplewise_std_normalization=False,\n",
-    "                              zca_whitening=False, rotation_range=10, zoom_range=0.1, width_shift_range=0.2,\n",
-    "                              height_shift_range=0.2, horizontal_flip=True, vertical_flip=False)\n",
-    "augs_gen.fit(X_train)"
+    "h = model.fit(X_train,y_train,batch_size=64,epochs=20,validation_data=(X_test,y_test), callbacks=[early_stopping, reduce_lr])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m model_score \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mevaluate(X_test,y_test)\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mModel Test Loss:\u001b[39m\u001b[39m\"\u001b[39m,model_score[\u001b[39m0\u001b[39m])\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mModel Test Accuracy:\u001b[39m\u001b[39m\"\u001b[39m,model_score[\u001b[39m1\u001b[39m])\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "h=model.fit(X_train,y_train, batch_size=16,\n",
-    "                      steps_per_epoch=1000,\n",
-    "                      epochs=10,validation_data=[X_test,Y_test])"
+    "model_score = model.evaluate(X_test,y_test)\n",
+    "print(\"Model Test Loss:\",model_score[0])\n",
+    "print(\"Model Test Accuracy:\",model_score[1])\n",
+    "\n",
+    "model_json = model.to_json()\n",
+    "with open(\"model.json\",\"w\") as json_file:\n",
+    "    json_file.write(model_json)\n",
+    "    \n",
+    "model.save(\"model.h5\")\n",
+    "print(\"Weights Saved\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -328,9 +315,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
